# mpu6050

./: CMakeLists.txt  gyro.c  mpu6050.c  mpu6050.h  reg.h
